--- a/docs/docs/classic-ml/deep-learning/pytorch/guide/index.mdx
+++ b/docs/docs/classic-ml/deep-learning/pytorch/guide/index.mdx
@@ -1,6 +1,6 @@
 import { APILink } from "@site/src/components/APILink";
 
-# MLflow PyTorch Integration
+# PyTorch within MLflow
 
 **PyTorch** has emerged as one of the leading deep learning frameworks, renowned for its intuitive design, dynamic computation graphs, and seamless debugging capabilities. By combining PyTorch's flexibility with MLflow's experiment tracking, you gain a powerful workflow for developing, monitoring, and deploying machine learning models.
 
