--- a/docs/docs/classic-ml/deep-learning/spacy/guide/index.mdx
+++ b/docs/docs/classic-ml/deep-learning/spacy/guide/index.mdx
@@ -1,38 +1,10 @@
 import { APILink } from "@site/src/components/APILink";
 
-# MLflow spaCy Integration
+# spaCy within MLflow
 
 **spaCy** is the leading industrial-strength natural language processing library, designed from the ground up for production use. Created by Explosion AI, spaCy combines cutting-edge research with practical engineering to deliver fast, accurate, and scalable NLP solutions that power everything from chatbots and content analysis to document processing and knowledge extraction systems.
 
 spaCy's **production-first philosophy** sets it apart from academic NLP libraries. With its streamlined API, extensive pre-trained models, and robust pipeline architecture, spaCy enables developers to build sophisticated NLP applications without sacrificing speed or maintainability.
-
-<details>
-  <summary>Why spaCy Leads Industrial NLP</summary>
-
-  #### Production-Ready Architecture
-  - ⚡ **Lightning Fast**: Optimized Cython codebase delivering industry-leading performance
-  - 🏭 **Battle-Tested**: Powers NLP systems at Netflix, Airbnb, Quora, and thousands of production applications
-  - 🎯 **Accuracy-Focused**: State-of-the-art models trained on massive datasets with rigorous evaluation
-  - 🔧 **Memory Efficient**: Designed for processing large documents and high-throughput applications
-
-  #### Comprehensive NLP Ecosystem
-  - 🧠 **Pre-trained Models**: 75+ models across 23 languages with transformer-based architectures
-  - 🔤 **Full Pipeline**: Tokenization, POS tagging, NER, dependency parsing, and text classification
-  - 📊 **Custom Training**: Easy fine-tuning and custom model development with modern ML techniques
-  - 🌐 **Multilingual**: First-class support for diverse languages and writing systems
-
-</details>
-
-## Why MLflow + spaCy?
-
-The integration of MLflow with spaCy creates a powerful ecosystem for developing, tracking, and deploying production-grade NLP systems:
-
-- 🚀 **Seamless Model Lifecycle**: Track spaCy model training, evaluation, and deployment in one unified platform
-- 📊 **Comprehensive Experiment Tracking**: Log custom metrics, model performance, and training configurations automatically
-- 🔄 **Version Control for NLP**: Manage model iterations, compare architectures, and track performance evolution
-- 🎯 **Custom Training Integration**: Deep integration with spaCy's training system through custom loggers
-- 👥 **Team Collaboration**: Share NLP experiments, models, and insights across your organization
-- 🏭 **Production Deployment**: Package and serve spaCy models with MLflow's deployment infrastructure
 
 ## Logging spaCy Models to MLflow
 
