--- a/docs/docs/introduction/index.mdx
+++ b/docs/docs/introduction/index.mdx
@@ -29,7 +29,7 @@ MLflow, at its core, provides a suite of tools aimed at simplifying the ML workf
 the various stages of ML development and deployment. Despite its expansive offerings, MLflow's functionalities are rooted in several
 foundational components:
 
-- [Tracking](/tracking): MLflow Tracking provides both an API and UI dedicated to the logging of parameters, code versions, metrics, and artifacts during the ML process. This centralized repository captures details such as parameters, metrics, artifacts, data, and environment configurations, giving teams insight into their models' evolution over time. Whether working in standalone scripts, notebooks, or other environments, Tracking facilitates the logging of results either to local files or a server, making it easier to compare multiple runs across different users.
+- [Tracking](/tracking): MLflow Tracking provides both an API and UI dedicated to the logging of parameters, code versions, metrics, and artifacts during the ML process. This centralized repository captures details such as parameters, metrics, artifacts, data, and environment configurations, giving teams insight into their models' evolution over time. Whether working in standalone scripts, notebooks, or other environments, Tracking facilitates the logging of results either to local files or a server, making it easier to compare multiple runs and models across different users. With [MLflow 3.0](/mlflow-3), capabilities for tracking models, agents, and generative AI applications have been enhanced significantly, allowing you to analyze their performance across all environments in one central location.
 
 - [Model Registry](/model-registry): A systematic approach to model management, the Model Registry assists in handling different versions of models, discerning their current state, and ensuring smooth productionization. It offers a centralized model store, APIs, and UI to collaboratively manage an MLflow Model's full lifecycle, including model lineage, versioning, aliasing, tagging, and annotations.
 
