--- a/docs/docs/tracking/index.mdx
+++ b/docs/docs/tracking/index.mdx
@@ -45,9 +45,13 @@ data science code, for example, a single `python train.py` execution. Each run r
 (various information about your run such as metrics, parameters, start and end times) and artifacts
 (output files from the run such as model weights, images, etc).
 
+### Models
+
+Models represent the trained machine learning artifacts that are produced during your runs. In [MLflow 3.0](/mlflow-3), models have become first class citizens with the introduction of a standalone <APILink fn="mlflow.entities.LoggedModel">LoggedModel</APILink> entity. Logged Models contain their own metadata and artifacts similar to runs.
+
 ### Experiments
 
-An experiment groups together runs for a specific task. You can create an experiment using the CLI, API, or UI.
+An experiment groups together runs and models for a specific task. You can create an experiment using the CLI, API, or UI.
 The MLflow API and UI also let you create and search for experiments. See [Organizing Runs into Experiments](/tracking/tracking-api#organizing-runs-in-experiments)
 for more details on how to organize your runs into experiments.
 
@@ -94,21 +98,31 @@ If you want to log your runs to a different location, such as a remote database 
 your team, follow the instructions in the [Set up MLflow Tracking Environment](#tracking-setup) section.
 :::
 
+## Tracking Models
+
+[MLflow 3.0](/mlflow-3) introduces a rich set of APIs for tracking <APILink fn="mlflow.entities.LoggedModel">LoggedModel</APILink> objects. You can create a logged model by calling `mlflow.<flavor>.log_model` (with or without an active run), then log metadata using functions such as <APILink fn="mlflow.log_metric" />, <APILink fn="mlflow.log_model_params" />, and <APILink fn="mlflow.set_logged_model_tags" />. For more information about these APIs, please see the <APILink fn="mlflow.get_logged_model">API reference</APILink>. For code examples, please visit [MLflow 3.0 Showcases](/mlflow-3/#mlflow-30-showcases).
+
 ## Tracking Datasets
 
 MLflow offers the ability to track datasets that are associated with model training events. These metadata associated with the Dataset can be stored through the use of the <APILink fn="mlflow.log_input" /> API.
 To learn more, please visit the [MLflow data documentation](/dataset/) to see the features available in this API.
 
-## Explore Runs and Results
+## Explore Runs, Models, and Results
 
 ### Tracking UI \{#tracking_ui}
 
-The Tracking UI lets you visually explore your experiments and runs, as shown on top of this page.
+The Tracking UI lets you visually explore your experiments, runs, and models, as shown on top of this page.
 
 - Experiment-based run listing and comparison (including run comparison across multiple experiments)
 - Searching for runs by parameter or metric value
 - Visualizing run metrics
 - Downloading run results (artifacts and metadata)
+
+These features are available for models as well, provided you are using [MLflow 3.0](/mlflow-3), as shown below.
+<figure>
+  ![MLflow UI Experiment view page models tab](/images/tracking/tracking-models-ui.png)
+  <figcaption>A screenshot of the MLflow Tracking UI on the models tab, showing a list of models under the experiment.</figcaption>
+</figure>
 
 If you log runs to a local `mlruns` directory, run the following command in the directory above it,
 then access http://127.0.0.1:5000 in your browser.
@@ -121,11 +135,11 @@ Alternatively, the [MLflow Tracking Server](#tracking_server) serves the same UI
 storage of run artifacts. In that case, you can view the UI at `http://<IP address of your MLflow tracking server>:5000`
 from any machine that can connect to your tracking server.
 
-## Querying Runs Programmatically \{#tracking_query_api}
+## Querying Runs and Models Programmatically \{#tracking_query_api}
 
 You can also access all of the functions in the Tracking UI programmatically with <APILink fn="mlflow.client.MlflowClient">MlflowClient</APILink>.
 
-For example, the following code snippet search for runs that has the best validation loss among all runs in the experiment.
+For example, the following code snippet searches for runs that has the best validation loss among all runs in the experiment.
 
 ```python
 client = mlflow.tracking.MlflowClient()
@@ -135,6 +149,18 @@ best_run = client.search_runs(
 )[0]
 print(best_run.info)
 # {'run_id': '...', 'metrics': {'val_loss': 0.123}, ...}
+```
+
+This code snippet searches for the logged model that has the best accuracy among all logged models in the experiment ([MLflow 3.0](/mlflow-3) only).
+
+```python
+client = mlflow.tracking.MlflowClient()
+best_model = client.search_logged_models(
+    experiment_ids=["0"],
+    order_by=[{"field_name": "metrics.accuracy", "ascending": False}],
+)[0]
+print(best_model)
+# LoggedModel(model_id='...', name='...', ...)
 ```
 
 ## Set up the MLflow Tracking Environment \{#tracking-setup}
