add scorer usage
Signed-off-by: Tomu Hirata <tomu.hirata@gmail.com>

--- a/docs/docs/prompts/optimize-prompt.mdx
+++ b/docs/docs/prompts/optimize-prompt.mdx
@@ -16,7 +16,7 @@ Currently, DSPy's MIPROv2 algorithm is supported by this API.
 In order to use <APILink fn="mlflow.genai.optimize_prompt" /> API, you need to prepare the following:
 
 1. An existing prompt registered in MLflow.
-2. A set of <APILink fn="mlflow.genai.Scorer">Scorer</APILink> objects that evaluate the quality of the prompt.
+2. A set of <APILink fn="mlflow.genai.Scorer">Scorer</APILink> objects that evaluate the quality of the prompt. See <APILink fn="mlflow.genai.scorer" /> for how to define a custom scorer.
 3. A set of training data and optionally validation data containing inputs and expected outputs.
 
 ## Basic Usage
