add openai settings
Signed-off-by: Tomu Hirata <tomu.hirata@gmail.com>

--- a/docs/docs/prompts/optimize-prompt.mdx
+++ b/docs/docs/prompts/optimize-prompt.mdx
@@ -7,7 +7,7 @@ import { APILink } from "@site/src/components/APILink";
 
 # Optimize Prompts (Experimental)
 
-MLflow allows you to plug your prompts into advanced prompt optimization techniques through MLflow's unified interface using the <APILink fn="mlflow.genai.optimize_prompt" /> API. 
+MLflow allows you to plug your prompts into advanced prompt optimization techniques through MLflow's unified interface using the <APILink fn="mlflow.genai.optimize_prompt" /> API.
 This feature helps you improve your prompts automatically by leveraging evaluation metrics and labeled data.
 Currently, DSPy's MIPROv2 algorithm is supported by this API.
 
@@ -33,17 +33,23 @@ Then, run the following code to register the initial prompt and optimize it.
 {/* TODO: Add multi-step agent example once Prompt Registry is released in the managed MLflow. */}
 
 ```python
+import os
 import mlflow
 from mlflow.genai.scorers import scorer
 from mlflow.genai.optimize import OptimizerConfig, LLMParams
 
-# Define a scorer function to evaluate prompt performance with the @scorer decorator
+os.environ["OPENAI_API_KEY"] = "sk-..."
+
+
+# Define a custom scorer function to evaluate prompt performance with the @scorer decorator.
+# The scorer function for optimization can take inputs, outputs, and expectations.
 @scorer
 def exact_match(expectations, outputs) -> bool:
     return expectations == outputs
 
+
 # Register the initial prompt
-initial_template="""
+initial_template = """
 You are a mathematical calculation agent. Let's think step by step to answer the following question:
 
 Question: {{question}}
@@ -60,43 +66,53 @@ prompt = mlflow.register_prompt(
 # It needs to contain inputs and expectations where each row is a dictionary.
 train_data = [
     {
-        'inputs': {'question': 'Given that $y=3$, evaluate $(1+y)^y$.'},
-        'expectations': {'answer': '64'}
+        "inputs": {"question": "Given that $y=3$, evaluate $(1+y)^y$."},
+        "expectations": {"answer": "64"},
     },
     {
-        'inputs': {'question': 'The midpoint of the line segment between $(x,y)$ and $(-9,1)$ is $(3,-5)$. Find $(x,y)$.'},
-        'expectations': {'answer': '(15,-11)'}
+        "inputs": {
+            "question": "The midpoint of the line segment between $(x,y)$ and $(-9,1)$ is $(3,-5)$. Find $(x,y)$."
+        },
+        "expectations": {"answer": "(15,-11)"},
     },
     {
-        'inputs': {'question': 'What is the value of $b$ if $5^b + 5^b + 5^b + 5^b + 5^b = 625^{(b-1)}$? Express your answer as a common fraction.'},
-        'expectations': {'answer': '\\frac{5}{3}'}
+        "inputs": {
+            "question": "What is the value of $b$ if $5^b + 5^b + 5^b + 5^b + 5^b = 625^{(b-1)}$? Express your answer as a common fraction."
+        },
+        "expectations": {"answer": "\\frac{5}{3}"},
     },
     {
-        'inputs': {'question': 'Evaluate the expression $a^3\\cdot a^2$ if $a= 5$.'},
-        'expectations': {'answer': '3125'}
+        "inputs": {"question": "Evaluate the expression $a^3\\cdot a^2$ if $a= 5$."},
+        "expectations": {"answer": "3125"},
     },
     {
-        'inputs': {'question': 'Evaluate $\\lceil 8.8 \\rceil+\\lceil -8.8 \\rceil$.'},
-        'expectations': {'answer': '17'}
+        "inputs": {"question": "Evaluate $\\lceil 8.8 \\rceil+\\lceil -8.8 \\rceil$."},
+        "expectations": {"answer": "17"},
     },
 ]
 
 eval_data = [
     {
-        'inputs': {'question': 'The sum of 27 consecutive positive integers is $3^7$. What is their median?'},
-        'expectations': {'answer': '81'}
+        "inputs": {
+            "question": "The sum of 27 consecutive positive integers is $3^7$. What is their median?"
+        },
+        "expectations": {"answer": "81"},
     },
     {
-        'inputs': {'question': 'What is the value of $x$ if $x^2 - 10x + 25 = 0$?'},
-        'expectations': {'answer': '5'}
+        "inputs": {"question": "What is the value of $x$ if $x^2 - 10x + 25 = 0$?"},
+        "expectations": {"answer": "5"},
     },
     {
-        'inputs': {'question': 'If $a\\ast b = 2a+5b-ab$, what is the value of $3\\ast10$?'},
-        'expectations': {'answer': '26'}
+        "inputs": {
+            "question": "If $a\\ast b = 2a+5b-ab$, what is the value of $3\\ast10$?"
+        },
+        "expectations": {"answer": "26"},
     },
     {
-        'inputs': {'question': 'Given that $-4$ is a solution to $x^2 + bx -36 = 0$, what is the value of $b$?'},
-        'expectations': {'answer': '-5'}
+        "inputs": {
+            "question": "Given that $-4$ is a solution to $x^2 + bx -36 = 0$, what is the value of $b$?"
+        },
+        "expectations": {"answer": "-5"},
     },
 ]
 
@@ -110,7 +126,7 @@ result = mlflow.genai.optimize_prompt(
     optimizer_config=OptimizerConfig(
         num_instruction_candidates=8,
         max_few_show_examples=2,
-    )
+    ),
 )
 
 # The optimized prompt is automatically registered as a new version
@@ -127,6 +143,8 @@ Therefore, you need to parse the output using `json.loads` in your application.
 ```python
 import mlflow
 import json
+import openai
+
 
 def predict(question: str, prompt_uri: str) -> str:
     prompt = mlflow.load_prompt(prompt_uri)
