--- a/docs/docs/prompts/optimize-prompt.mdx
+++ b/docs/docs/prompts/optimize-prompt.mdx
@@ -133,7 +133,7 @@ result = mlflow.genai.optimize_prompt(
 print(result.prompt.uri)
 ```
 
-After the optimization process is completed, you can visit the MLFlow Prompt Registry page and see the optimized prompt.
+After the optimization process is completed, you can visit the MLflow Prompt Registry page and see the optimized prompt.
 
 ![Optimized Prompt](/images/llms/optimize-prompt/registered_prompt.png)
 
